@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Added ``PyType_ClearCache()`` and ``sys._cleartypecache`` to clear the
+  internal lookup cache for ref leak tests.
+
 - Patch #1473257: generator objects gain a gi_code attribute. This is the
   same object as the func_code attribute of the function that produced the
   generator.
